--- a/look_for_broken.ipynb
+++ b/look_for_broken.ipynb
@@ -21,7 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Dossier où sont stockés les CSV\n",
-    "folder_path = Path('./scopus')\n",
+    "folder_path = Path('data/scopus')\n",
     "\n",
     "# Initialiser un dictionnaire pour stocker les statistiques par discipline\n",
     "stats_per_discipline = {}\n",
