distance 1 pour comp

--- a/statsJournaux.ipynb
+++ b/statsJournaux.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-22T10:21:29.174021Z",
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mezio\\AppData\\Local\\Temp\\ipykernel_27892\\218205292.py:17: DtypeWarning:\n",
+      "C:\\Users\\mezio\\AppData\\Local\\Temp\\ipykernel_27892\\1859463618.py:20: DtypeWarning:\n",
       "\n",
       "Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -86,7 +86,9 @@
       "Fichier CSV sauvegardé avec le nombre de publications par ISSN : ./data/scopus_results\\clean_SOCI_issn_publication_counts.csv\n",
       "Graphique sauvegardé : ./data/scopus_results\\clean_SOCI_publication_distribution.html\n",
       "Fichier CSV sauvegardé avec le nombre de publications par ISSN : ./data/scopus_results\\clean_VETE_issn_publication_counts.csv\n",
-      "Graphique sauvegardé : ./data/scopus_results\\clean_VETE_publication_distribution.html\n"
+      "Graphique sauvegardé : ./data/scopus_results\\clean_VETE_publication_distribution.html\n",
+      "Fichier CSV global sauvegardé avec le nombre de publications par ISSN : ./data/scopus_results\\overall_issn_publication_counts.csv\n",
+      "Graphique global sauvegardé : ./data/scopus_results\\overall_publication_distribution.html\n"
      ]
     }
    ],
@@ -102,12 +104,18 @@
     "output_folder = './data/scopus_results'\n",
     "os.makedirs(output_folder, exist_ok=True)  # Créer le dossier s'il n'existe pas\n",
     "\n",
+    "# DataFrame global pour regrouper toutes les données\n",
+    "overall_df = pd.DataFrame()\n",
+    "\n",
     "# Parcourir tous les fichiers CSV dans le dossier\n",
     "for file_name in os.listdir(folder_path):\n",
     "    if file_name.endswith('.csv'):\n",
     "        # Charger le fichier CSV\n",
     "        file_path = os.path.join(folder_path, file_name)\n",
     "        df = pd.read_csv(file_path)\n",
+    "        \n",
+    "        # Ajouter les données au DataFrame global\n",
+    "        overall_df = pd.concat([overall_df, df], ignore_index=True)\n",
     "        \n",
     "        # Compter le nombre de publications par ISSN\n",
     "        publication_counts = df['prism:issn'].value_counts()\n",
@@ -144,7 +152,44 @@
     "        # Enregistrer le graphique\n",
     "        output_file_2 = os.path.join(output_folder, f'{file_name.replace(\".csv\", \"\")}_publication_distribution.html')\n",
     "        fig.write_html(output_file_2)\n",
-    "        print(f\"Graphique sauvegardé : {output_file_2}\")\n"
+    "        print(f\"Graphique sauvegardé : {output_file_2}\")\n",
+    "\n",
+    "# Générer les résultats \"overall\"\n",
+    "overall_publication_counts = overall_df['prism:issn'].value_counts()\n",
+    "\n",
+    "# Sauvegarder le compte total par ISSN\n",
+    "overall_file_1 = os.path.join(output_folder, 'overall_issn_publication_counts.csv')\n",
+    "overall_publication_counts.to_csv(overall_file_1, header=['Nombre de publications'], index_label='ISSN')\n",
+    "print(f\"Fichier CSV global sauvegardé avec le nombre de publications par ISSN : {overall_file_1}\")\n",
+    "\n",
+    "# Créer un DataFrame explicite pour l'histogramme global\n",
+    "overall_count_of_counts = pd.DataFrame({'Nombre de journaux': overall_publication_counts.value_counts()}).reset_index()\n",
+    "overall_count_of_counts.columns = ['Nombre de publications', 'Nombre de journaux']\n",
+    "\n",
+    "# Trier par le nombre de publications\n",
+    "overall_count_of_counts = overall_count_of_counts.sort_values(by='Nombre de publications')\n",
+    "overall_count_dict = overall_count_of_counts.set_index('Nombre de publications')['Nombre de journaux'].to_dict()\n",
+    "\n",
+    "# Créer un histogramme global avec Plotly\n",
+    "overall_fig = go.Figure(data = [go.Bar(\n",
+    "    x=list(overall_count_dict.keys()),  # Nombre de publications\n",
+    "    y=list(overall_count_dict.values()),  # Nombre de journaux\n",
+    "    marker=dict(color='green'),  # Couleur du graphique global\n",
+    "    name=\"Distribution globale des publications\"\n",
+    ")])\n",
+    "\n",
+    "# Ajouter des labels et un titre\n",
+    "overall_fig.update_layout(\n",
+    "    title=\"Distribution globale du nombre de publications par journal\",\n",
+    "    xaxis_title=\"Nombre de publications\",\n",
+    "    yaxis_title=\"Nombre de journaux\",\n",
+    "    template=\"plotly_white\"\n",
+    ")\n",
+    "\n",
+    "# Enregistrer l'histogramme global\n",
+    "overall_file_2 = os.path.join(output_folder, 'overall_publication_distribution.html')\n",
+    "overall_fig.write_html(overall_file_2)\n",
+    "print(f\"Graphique global sauvegardé : {overall_file_2}\")\n"
    ]
   },
   {
