ongoing split on notebook into py files

--- a/clean_journals_detailed_stats.ipynb
+++ b/clean_journals_detailed_stats.ipynb
@@ -141,11 +141,11 @@
     "            values = list(unclean_dict.values()),\n",
     "            title={'text': filename + \" Distrib subtype/unclean Journals\"})])\n",
     "        print(\"prepare for writing\")\n",
-    "        fig.write_html(output_dir + \"/charts2/\" + filename + \".html\")\n",
+    "        fig.write_html(output_dir + \"/charts/\" + filename + \".html\")\n",
     "        print(\"write fig\")\n",
-    "        fig1.write_html(output_dir + \"/charts2/\" + filename+\"_DistribClean\" + \".html\")\n",
+    "        fig1.write_html(output_dir + \"/charts/\" + filename+\"_DistribClean\" + \".html\")\n",
     "        print(\"write fig1\")\n",
-    "        fig2.write_html(output_dir + \"/charts2/\" + filename+\"_DistribUnclean\" + \".html\")\n",
+    "        fig2.write_html(output_dir + \"/charts/\" + filename+\"_DistribUnclean\" + \".html\")\n",
     "        print(\"write fig2\")"
    ],
    "outputs": [
