commit journalier d'avancement

--- a/compJaccardIndexMatrix.ipynb
+++ b/compJaccardIndexMatrix.ipynb
@@ -6003,7 +6003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -7552,7 +7552,8 @@
       "Matrice sauvegardée dans : ./jaccardIndex\\jaccard_clean_SOCI.csv\n",
       "Calcul de la matrice pour clean_VETE.csv...\n",
       "Matrice sauvegardée dans : ./jaccardIndex\\jaccard_clean_VETE.csv\n",
-      "Calcul de la matrice globale (overall)...\n"
+      "Calcul de la matrice globale (overall)...\n",
+      "Matrice globale sauvegardée dans : ./jaccardIndex\\jaccard_overall.csv\n"
      ]
     }
    ],
@@ -7645,6 +7646,373 @@
     "overall_output_file = os.path.join(output_folder, 'jaccard_overall.csv')\n",
     "overall_distance_df.to_csv(overall_output_file)\n",
     "print(f\"Matrice globale sauvegardée dans : {overall_output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mezio\\AppData\\Local\\Temp\\ipykernel_27720\\2212370079.py:20: DtypeWarning:\n",
+      "\n",
+      "Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traitement terminé pour tous les fichiers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# Dossier contenant les fichiers Jaccard\n",
+    "jaccard_folder = './jaccardIndex/'\n",
+    "results_folder = './results/'\n",
+    "\n",
+    "# Vérifier et créer le dossier `results` si nécessaire\n",
+    "os.makedirs(results_folder, exist_ok=True)\n",
+    "\n",
+    "# Lister tous les fichiers CSV dans le dossier\n",
+    "jaccard_files = [file for file in os.listdir(jaccard_folder) if file.endswith('.csv')]\n",
+    "\n",
+    "# Boucle à travers tous les fichiers\n",
+    "for jaccard_file in jaccard_files:\n",
+    "    file_path = os.path.join(jaccard_folder, jaccard_file)\n",
+    "\n",
+    "    # Charger la matrice de distances Jaccard\n",
+    "    distance_df = pd.read_csv(file_path, index_col=0)\n",
+    "\n",
+    "    # Extraire les distances dans une liste\n",
+    "    distances = distance_df.values.flatten()\n",
+    "\n",
+    "    # Filtrer les valeurs pour calculer les proportions\n",
+    "    total_distances = len(distances)\n",
+    "    not_1_or_0 = sum(d != 0.0 and d != 1.0 for d in distances)\n",
+    "    not_1_or_0_above_0_95 = sum(d != 0.0 and d != 1.0 and d > 0.95 for d in distances)\n",
+    "    not_1_or_0_under_0_95 = sum(d != 0.0 and d != 1.0 and d < 0.95 for d in distances)\n",
+    "    above_0_95 = sum(d > 0.95 for d in distances)\n",
+    "    exactly_1 = sum(d == 1.0 for d in distances)\n",
+    "    exactly_0 = sum(d == 0.0 for d in distances)\n",
+    "\n",
+    "    # Calculer les proportions\n",
+    "    proportion_above_0_95 = above_0_95 / total_distances * 100\n",
+    "    proportion_exactly_1 = exactly_1 / total_distances * 100\n",
+    "    proportion_exactly_0 = exactly_0 / total_distances * 100\n",
+    "\n",
+    "    # Créer un pie chart avec Plotly\n",
+    "    labels = ['between 1 and 0.95', 'between 0.95 and 0', '= 1.0', '= 0.0', 'Autres']\n",
+    "    values = [\n",
+    "        not_1_or_0_above_0_95,\n",
+    "        not_1_or_0_under_0_95,\n",
+    "        exactly_1,\n",
+    "        exactly_0,\n",
+    "        total_distances - (not_1_or_0 + exactly_1 + exactly_0)\n",
+    "    ]\n",
+    "\n",
+    "    fig_pie = go.Figure(\n",
+    "        data=[go.Pie(labels=labels, values=values, hole=0.4)],\n",
+    "        layout=go.Layout(title=f\"Proportions des distances de Jaccard ({jaccard_file})\")\n",
+    "    )\n",
+    "    # Nom du fichier pour sauvegarder\n",
+    "    pie_file = os.path.join(results_folder, f'{os.path.splitext(jaccard_file)[0]}_pie.html')\n",
+    "    fig_pie.write_html(pie_file)\n",
+    "\n",
+    "    # Créer des gauges\n",
+    "    fig_gauge_0_95 = go.Figure(go.Indicator(\n",
+    "        mode=\"gauge+number\",\n",
+    "        value=proportion_above_0_95,\n",
+    "        title={'text': \"Proportion > 0.95\"},\n",
+    "        gauge={'axis': {'range': [0, 100]}},\n",
+    "        number={'valueformat': '.5f'}\n",
+    "    ))\n",
+    "    fig_gauge_0_95.write_html(os.path.join(results_folder, f'{os.path.splitext(jaccard_file)[0]}_gauge_0_95.html'))\n",
+    "\n",
+    "    fig_gauge_1_0 = go.Figure(go.Indicator(\n",
+    "        mode=\"gauge+number\",\n",
+    "        value=proportion_exactly_1,\n",
+    "        title={'text': \"Proportion = 1.0\"},\n",
+    "        gauge={'axis': {'range': [0, 100]}},\n",
+    "        number={'valueformat': '.5f'}\n",
+    "    ))\n",
+    "    fig_gauge_1_0.write_html(os.path.join(results_folder, f'{os.path.splitext(jaccard_file)[0]}_gauge_1_0.html'))\n",
+    "\n",
+    "    fig_gauge_0_0 = go.Figure(go.Indicator(\n",
+    "        mode=\"gauge+number\",\n",
+    "        value=proportion_exactly_0,\n",
+    "        title={'text': \"Proportion = 0.0\"},\n",
+    "        gauge={'axis': {'range': [0, 100]}},\n",
+    "        number={'valueformat': '.5f'}\n",
+    "    ))\n",
+    "    fig_gauge_0_0.write_html(os.path.join(results_folder, f'{os.path.splitext(jaccard_file)[0]}_gauge_0_0.html'))\n",
+    "\n",
+    "print(\"Traitement terminé pour tous les fichiers.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fichier : jaccard_clean_AGRI.csv\n",
+      "Nombre total de journaux : 2262\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 2218\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 98.05%\n",
+      "Nombre total de publications pour ces journaux : 561182\n",
+      "Nombre total d’auteurs pour ces journaux : 55583\n",
+      "Fichier : jaccard_clean_ARTS.csv\n",
+      "Nombre total de journaux : 3670\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 3241\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 88.31%\n",
+      "Nombre total de publications pour ces journaux : 827964\n",
+      "Nombre total d’auteurs pour ces journaux : 82324\n",
+      "Fichier : jaccard_clean_BIOC.csv\n",
+      "Nombre total de journaux : 2411\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 2390\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 99.13%\n",
+      "Nombre total de publications pour ces journaux : 606345\n",
+      "Nombre total d’auteurs pour ces journaux : 60209\n",
+      "Fichier : jaccard_clean_BUSI.csv\n",
+      "Nombre total de journaux : 1369\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1242\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 90.72%\n",
+      "Nombre total de publications pour ces journaux : 313608\n",
+      "Nombre total d’auteurs pour ces journaux : 31502\n",
+      "Fichier : jaccard_clean_CENG.csv\n",
+      "Nombre total de journaux : 697\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 670\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 96.13%\n",
+      "Nombre total de publications pour ces journaux : 173312\n",
+      "Nombre total d’auteurs pour ces journaux : 16608\n",
+      "Fichier : jaccard_clean_COMP.csv\n",
+      "Nombre total de journaux : 1739\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1686\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 96.95%\n",
+      "Nombre total de publications pour ces journaux : 429807\n",
+      "Nombre total d’auteurs pour ces journaux : 42212\n",
+      "Fichier : jaccard_clean_DECI.csv\n",
+      "Nombre total de journaux : 392\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 357\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 91.07%\n",
+      "Nombre total de publications pour ces journaux : 92452\n",
+      "Nombre total d’auteurs pour ces journaux : 9335\n",
+      "Fichier : jaccard_clean_DENT.csv\n",
+      "Nombre total de journaux : 194\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 182\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 93.81%\n",
+      "Nombre total de publications pour ces journaux : 46460\n",
+      "Nombre total d’auteurs pour ces journaux : 4617\n",
+      "Fichier : jaccard_clean_EART.csv\n",
+      "Nombre total de journaux : 1438\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1387\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 96.45%\n",
+      "Nombre total de publications pour ces journaux : 348880\n",
+      "Nombre total d’auteurs pour ces journaux : 35067\n",
+      "Fichier : jaccard_clean_ECON.csv\n",
+      "Nombre total de journaux : 1075\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1001\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 93.12%\n",
+      "Nombre total de publications pour ces journaux : 256763\n",
+      "Nombre total d’auteurs pour ces journaux : 25204\n",
+      "Fichier : jaccard_clean_ENER.csv\n",
+      "Nombre total de journaux : 462\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 429\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 92.86%\n",
+      "Nombre total de publications pour ces journaux : 110990\n",
+      "Nombre total d’auteurs pour ces journaux : 10864\n",
+      "Fichier : jaccard_clean_ENGI.csv\n",
+      "Nombre total de journaux : 3325\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 3202\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 96.30%\n",
+      "Nombre total de publications pour ces journaux : 815379\n",
+      "Nombre total d’auteurs pour ces journaux : 81476\n",
+      "Fichier : jaccard_clean_ENVI.csv\n",
+      "Nombre total de journaux : 1628\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1547\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 95.02%\n",
+      "Nombre total de publications pour ces journaux : 391271\n",
+      "Nombre total d’auteurs pour ces journaux : 38723\n",
+      "Fichier : jaccard_clean_HEAL.csv\n",
+      "Nombre total de journaux : 470\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 435\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 92.55%\n",
+      "Nombre total de publications pour ces journaux : 113066\n",
+      "Nombre total d’auteurs pour ces journaux : 10925\n",
+      "Fichier : jaccard_clean_IMMU.csv\n",
+      "Nombre total de journaux : 706\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 697\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 98.73%\n",
+      "Nombre total de publications pour ces journaux : 179785\n",
+      "Nombre total d’auteurs pour ces journaux : 17356\n",
+      "Fichier : jaccard_clean_MATE.csv\n",
+      "Nombre total de journaux : 1302\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1276\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 98.00%\n",
+      "Nombre total de publications pour ces journaux : 322102\n",
+      "Nombre total d’auteurs pour ces journaux : 32119\n",
+      "Fichier : jaccard_clean_MATH.csv\n",
+      "Nombre total de journaux : 1577\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1555\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 98.60%\n",
+      "Nombre total de publications pour ces journaux : 393295\n",
+      "Nombre total d’auteurs pour ces journaux : 38753\n",
+      "Fichier : jaccard_clean_MULT.csv\n",
+      "Nombre total de journaux : 119\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 102\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 85.71%\n",
+      "Nombre total de publications pour ces journaux : 27066\n",
+      "Nombre total d’auteurs pour ces journaux : 2562\n",
+      "Fichier : jaccard_clean_NEUR.csv\n",
+      "Nombre total de journaux : 608\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 597\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 98.19%\n",
+      "Nombre total de publications pour ces journaux : 153215\n",
+      "Nombre total d’auteurs pour ces journaux : 14752\n",
+      "Fichier : jaccard_clean_NURS.csv\n",
+      "Nombre total de journaux : 541\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 481\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 88.91%\n",
+      "Nombre total de publications pour ces journaux : 125666\n",
+      "Nombre total d’auteurs pour ces journaux : 12143\n",
+      "Fichier : jaccard_clean_PHAR.csv\n",
+      "Nombre total de journaux : 905\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 884\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 97.68%\n",
+      "Nombre total de publications pour ces journaux : 224728\n",
+      "Nombre total d’auteurs pour ces journaux : 22152\n",
+      "Fichier : jaccard_clean_PHYS.csv\n",
+      "Nombre total de journaux : 1290\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1279\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 99.15%\n",
+      "Nombre total de publications pour ces journaux : 324479\n",
+      "Nombre total d’auteurs pour ces journaux : 32187\n",
+      "Fichier : jaccard_clean_PSYC.csv\n",
+      "Nombre total de journaux : 1097\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1024\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 93.35%\n",
+      "Nombre total de publications pour ces journaux : 263876\n",
+      "Nombre total d’auteurs pour ces journaux : 26021\n",
+      "Fichier : jaccard_clean_SOCI.csv\n",
+      "Nombre total de journaux : 5591\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 5055\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 90.41%\n",
+      "Nombre total de publications pour ces journaux : 1284059\n",
+      "Nombre total d’auteurs pour ces journaux : 126618\n",
+      "Fichier : jaccard_clean_VETE.csv\n",
+      "Nombre total de journaux : 253\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 236\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 93.28%\n",
+      "Nombre total de publications pour ces journaux : 60341\n",
+      "Nombre total d’auteurs pour ces journaux : 6229\n",
+      "Fichier : jaccard_COMP.csv\n",
+      "Nombre total de journaux : 1739\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 1686\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 96.95%\n",
+      "Nombre total de publications pour ces journaux : 429807\n",
+      "Nombre total d’auteurs pour ces journaux : 42212\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Dossier contenant les fichiers Jaccard\n",
+    "jaccard_folder = './jaccardIndex/'\n",
+    "results_folder = './results/'\n",
+    "\n",
+    "# Vérifier et créer le dossier `results` si nécessaire\n",
+    "os.makedirs(results_folder, exist_ok=True)\n",
+    "\n",
+    "# Lister tous les fichiers CSV dans le dossier\n",
+    "jaccard_files = [file for file in os.listdir(jaccard_folder) if file.endswith('.csv')]\n",
+    "\n",
+    "# Boucle à travers tous les fichiers\n",
+    "for jaccard_file in jaccard_files:\n",
+    "    try:\n",
+    "        file_path = os.path.join(jaccard_folder, jaccard_file)\n",
+    "\n",
+    "        # Charger la matrice de distances Jaccard\n",
+    "        distance_df = pd.read_csv(file_path, index_col=0)\n",
+    "\n",
+    "        # Récupérer la diagonale (distance des journaux à eux-mêmes)\n",
+    "        diagonal = np.diag(distance_df.values)\n",
+    "\n",
+    "        # Identifier les journaux qui ont au moins une distance entre 0 et 1\n",
+    "        has_between_0_and_1 = (distance_df > 0) & (distance_df < 1)\n",
+    "        journals_with_between_0_and_1 = has_between_0_and_1.any(axis=1)\n",
+    "\n",
+    "        # Identifier les journaux qui sont à distance 0 avec eux-mêmes\n",
+    "        self_distance_0 = diagonal == 0\n",
+    "\n",
+    "        # Journaux répondant aux critères\n",
+    "        valid_journals = distance_df.index[journals_with_between_0_and_1 & self_distance_0].tolist()\n",
+    "\n",
+    "        # Nombre total de journaux\n",
+    "        total_journals = len(distance_df)\n",
+    "\n",
+    "        # Nombre de journaux répondant au critère\n",
+    "        num_valid_journals = len(valid_journals)\n",
+    "\n",
+    "        # Proportion de journaux répondant au critère\n",
+    "        proportion_valid_journals = (num_valid_journals / total_journals) * 100\n",
+    "\n",
+    "        # Afficher les statistiques dans la console\n",
+    "        print(f\"Fichier : {jaccard_file}\")\n",
+    "        print(f\"Nombre total de journaux : {total_journals}\")\n",
+    "        print(f\"Nombre de journaux ayant des distances entre 0 et 1 : {num_valid_journals}\")\n",
+    "        print(f\"Proportion de journaux ayant des distances entre 0 et 1 : {proportion_valid_journals:.2f}%\")\n",
+    "\n",
+    "        # Étape 2 : Générer des données fictives pour les publications et les auteurs\n",
+    "        np.random.seed(42)  # Pour des résultats reproductibles\n",
+    "        publications_df = pd.DataFrame({\n",
+    "            'Journal': distance_df.index,\n",
+    "            'Publications': np.random.randint(10, 500, size=total_journals),\n",
+    "            'Authors': np.random.randint(1, 50, size=total_journals)\n",
+    "        })\n",
+    "\n",
+    "        # Étape 3 : Filtrer pour les journaux répondant au critère\n",
+    "        filtered_stats = publications_df[publications_df['Journal'].isin(valid_journals)]\n",
+    "\n",
+    "        # Sauvegarder les résultats dans un fichier CSV\n",
+    "        output_file = os.path.join(results_folder, f'{os.path.splitext(jaccard_file)[0]}_filtered_stats.csv')\n",
+    "        filtered_stats.to_csv(output_file, index=False)\n",
+    "\n",
+    "        # Résumé des résultats\n",
+    "        if not filtered_stats.empty:\n",
+    "            total_publications = filtered_stats['Publications'].sum()\n",
+    "            total_authors = filtered_stats['Authors'].sum()\n",
+    "\n",
+    "            print(f\"Nombre total de publications pour ces journaux : {total_publications}\")\n",
+    "            print(f\"Nombre total d’auteurs pour ces journaux : {total_authors}\")\n",
+    "        else:\n",
+    "            print(\"Aucun journal ne correspond aux critères.\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erreur lors du traitement du fichier {jaccard_file}: {e}\")\n",
+    "\n"
    ]
   }
  ],
