--- a/compJaccardIndexMatrix.ipynb
+++ b/compJaccardIndexMatrix.ipynb
@@ -7768,7 +7768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -7931,6 +7931,37 @@
       "Proportion de journaux ayant des distances entre 0 et 1 : 96.95%\n",
       "Nombre total de publications pour ces journaux : 429807\n",
       "Nombre total d’auteurs pour ces journaux : 42212\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mezio\\AppData\\Local\\Temp\\ipykernel_62216\\1829538880.py:21: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  distance_df = pd.read_csv(file_path, index_col=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fichier : jaccard_overall.csv\n",
+      "Nombre total de journaux : 22244\n",
+      "Nombre de journaux ayant des distances entre 0 et 1 : 21769\n",
+      "Proportion de journaux ayant des distances entre 0 et 1 : 97.86%\n",
+      "Nombre total de publications pour ces journaux : 5527435\n",
+      "Nombre total d’auteurs pour ces journaux : 544451\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 79\u001b[0m\n\u001b[0;32m     76\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     77\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mErreur lors du traitement du fichier \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mjaccard_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 79\u001b[0m \u001b[43mpr\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pr' is not defined"
      ]
     }
    ],
