--- a/journalCleaner.ipynb
+++ b/journalCleaner.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T12:17:04.591288Z",
-     "start_time": "2024-11-22T12:17:04.586598Z"
+     "end_time": "2024-12-13T09:33:43.488202Z",
+     "start_time": "2024-12-13T09:33:43.481620Z"
     }
    },
    "source": [
@@ -20,14 +20,14 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T12:20:27.840625Z",
-     "start_time": "2024-11-22T12:17:04.624196Z"
+     "end_time": "2024-12-13T09:34:42.130152Z",
+     "start_time": "2024-12-13T09:33:43.521143Z"
     }
    },
    "source": [
@@ -44,7 +44,7 @@
     "    f.write('discipline,nb_pub,nb_journals_pub,nb_clean_journals_pub,nb_clean_articles\\n')\n",
     "\n",
     "for filename in os.listdir(input_dir):\n",
-    "    if filename.endswith('.csv') and filename != \"MEDI.csv.broken\":\n",
+    "    if filename.endswith('MEDI.csv') and filename != \"MEDI.csv.broken\":\n",
     "        print(filename)\n",
     "        input_path = os.path.join(input_dir, filename)\n",
     "\n",
@@ -56,8 +56,8 @@
     "        discipline = filename.split('.')[0]\n",
     "        output_path = os.path.join(output_dir, f\"{discipline}_articles.csv\")\n",
     "        clean_articles_df.to_csv(output_path, index=False)\n",
-    "        # output_path = os.path.join(output_dir, f\"{discipline}_journals.csv\")\n",
-    "        # clean_journal_df.to_csv(output_path, index=False)\n",
+    "        output_path = os.path.join(output_dir, f\"{discipline}_journals.csv\")\n",
+    "        clean_journal_df.to_csv(output_path, index=False)\n",
     "        with open(output_file, 'a') as f:\n",
     "            f.write(f'{discipline},{len(df)},{len(journals_df)},{len(clean_journal_df)},{len(clean_articles_df)}\\n')\n",
     "\n",
@@ -76,44 +76,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AGRI.csv\n",
-      "ARTS.csv\n",
-      "BIOC.csv\n",
-      "BUSI.csv\n",
-      "CENG.csv\n",
-      "COMP.csv\n",
-      "DECI.csv\n",
-      "DENT.csv\n",
-      "EART.csv\n",
-      "ECON.csv\n",
-      "ENER.csv\n",
-      "ENGI.csv\n",
-      "ENVI.csv\n",
-      "HEAL.csv\n",
-      "IMMU.csv\n",
-      "MATE.csv\n",
-      "MATH.csv\n",
       "MEDI.csv\n",
-      "MULT.csv\n",
-      "NEUR.csv\n",
-      "NURS.csv\n",
-      "PHAR.csv\n",
-      "PHYS.csv\n",
-      "PSYC.csv\n",
-      "SOCI.csv\n",
-      "VETE.csv\n",
       "Traitement terminé. Les fichiers nettoyés sont disponibles dans le dossier ./data/cleanScopus.\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T12:20:27.941267Z",
-     "start_time": "2024-11-22T12:20:27.936946Z"
+     "end_time": "2024-12-13T09:34:42.152166Z",
+     "start_time": "2024-12-13T09:34:42.143980Z"
     }
    },
    "source": "",
